# ddktech

./: .env.example  .htaccess  AWS-DEPLOYMENT-GUIDE.md  AWS_LAMBDA_DEPLOYMENT.md  CNAME  DDK-TECH_-ব্যবসার-অ্যাপ.html  GITHUB-PAGES-DEPLOYMENT.md  GOOGLE-SUBMISSION-CHECKLIST.md  PRODUCTION-READINESS-CHECKLIST.md  README.md  app.py  create-dynamodb-table.ps1  deploy-to-github.md  deploy.sh  google-site-verification.html  index.html  index_old.html  lambda_app.py  manifest.json  package.json  pricing.html  pyproject.toml  replit.md  robots.txt  routes.py  seo-config.json  sitemap.xml  tailwind.config.js  zappa_settings.json
attached_assets/: index_1755310893497.html
css/: futuristic-eye.css  main.css  matrix-animation.css  tailwind.css
ddktech_chatbot/: ddk_bot.py
js/: futuristic-eye.js  google-analytics.js  matrix-animation.js  mobile-gsap-config.js  mobile-smooth.js
lambda-clean/: lambda_handler_ddk.py
lambda-clean/jmespath-1.0.1.dist-info/: RECORD
lambda-deploy-full/: ddk_bot.py  lambda_handler_ddk.py
lambda-deploy-full/boto3-1.40.11.dist-info/: RECORD
lambda-deploy-full/botocore-1.40.11.dist-info/: RECORD
lambda-deploy-full/ddktech_chatbot/: lambda_handler_ddk.py
pages/: about_experience.html  contact_hub.html  homepage.html  services_showcase.html  technology_center.html
public/: manifest.json
static/css/: chatbot.css
static/js/: chatbot.js
templates/: chatbot.html  integration.html
